# AI-assist-book

./: .gitignore  README.md  RELEASE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
releases/: README.md
scripts/: install-prerequisites.sh  setup-env.sh
src/: App.tsx  index.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  storage.rs
src-tauri/src/commands/: ai.rs  library.rs  mod.rs
src/components/ai/: ExplainPanel.tsx  SelectionToolbar.tsx
src/components/reader/: EpubViewer.tsx  PdfViewer.tsx  ReaderShell.tsx
src/components/settings/: SettingsView.tsx
src/components/ui/: AdaptivePanel.tsx  BottomSheet.tsx  Button.tsx  SidePanel.tsx
src/hooks/: useBreakpoint.ts  useTextSelection.ts
src/lib/: utils.ts
src/services/: libraryService.ts  settingsService.ts
src/stores/: appStore.ts
